Updated to workload spec

--- a/resources/other/Dockerfile
+++ b/resources/other/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install -r /tmp/requirements.txt && \
     mkdir -p ./workspace
 
 ENTRYPOINT evidently ui
-CMD --workspace ./workspace --port 8080 –-demo-project --demo-project
+CMD --workspace ./workspace --port 8080 --demo-project
