--- a/resources/other/Dockerfile
+++ b/resources/other/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10-slim
 
 COPY requirements.txt /tmp
+COPY monitoring.py /tmp
 RUN pip install -r /tmp/requirements.txt && mkdir -p ./workspace
 COPY workspace/. /workspace/
 
