--- a/resources/other/Dockerfile
+++ b/resources/other/Dockerfile
@@ -5,5 +5,5 @@ COPY monitoring.py /tmp
 RUN pip install -r /tmp/requirements.txt && mkdir -p ./workspace
 COPY workspace/. /workspace/
 
-ENTRYPOINT ["evidently ui"]
-CMD ["--port", "8080", "--demo-projects", "all"]
+ENTRYPOINT ["evidently"]
+CMD ["ui", "--port", "8080", "--demo-projects", "all"]
